tests/single_instruction_translation_validation/mcsema/register-variants-samereg/psignd_xmm_xmm/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:206:13: error: use of undefined value '@my.lifetime.end'
  call void @my.lifetime.end(i64 16, i8* nonnull %18)
            ^
0.02user 0.04system 0:00.21elapsed 29%CPU (0avgtext+0avgdata 27224maxresident)k
0inputs+16outputs (0major+3258minor)pagefaults 0swaps
